fix layout | add two columns on mobile devices | remove redundant styles

--- a/Client/src/app/pages/loans/in-advance/loan-single/loan-in-advance-single-page.component.scss
+++ b/Client/src/app/pages/loans/in-advance/loan-single/loan-in-advance-single-page.component.scss
@@ -1,9 +1,5 @@
 @import 'src/app/shared/styles/_mixins';
 
-.greened {
-  color: var(--main-green);
-}
-
 .content {
   flex-direction: column;
 }
@@ -110,69 +106,6 @@ h1 {
   }
 }
 
-.calculator {
-  padding: 3rem 0;
-  .content {
-    background-color: var(--white);
-  }
-  .padded-content {
-    display: flex;
-    flex-direction: row;
-  }
-  h2 {
-    line-height: 3rem;
-  }
-  .calculator-left {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 3rem 3rem 0;
-    flex: 1 1 73%;
-    label {
-      font-size: 1.4rem;
-    }
-    label,
-    p {
-      margin-top: 3rem;
-    }
-    input {
-      min-height: 3.4rem;
-    }
-  }
-  .calculator-right {
-    display: flex;
-    flex-direction: column;
-    padding: 3rem 0 2rem 2rem;
-    border-left: 0.1rem solid #dddede;
-    .calculator-rate-mode-switcher{
-      flex-direction: row;
-      input{
-        margin-right: 1rem;
-      }
-    }
-    p {
-      display: flex;
-      flex-direction: column;
-      border-bottom: 0.1rem solid #dddede;
-      padding-bottom: 2rem;
-      margin-top: 2rem;
-      span {
-        line-height: 3rem;
-        font-weight: bold;
-        font-size: 2.4rem;
-      }
-      &:first-child {
-        margin-top: 0;
-      }
-      &:last-child {
-        border-bottom: none;
-      }
-    }
-    .get-money-btn {
-      background-color: var(--orange);
-    }
-  }
-}
-
 .full-details {
   margin-top: 3rem;
   .full-details-composition {
@@ -206,16 +139,6 @@ h1 {
       transition: background-color var(--transition-duration) linear;
       &:hover {
         background-color: var(--light-green-btn);
-      }
-    }
-  }
-  .calculator {
-    .calculator-right {
-      .get-money-btn {
-        transition: background-color var(--transition-duration) linear;
-        &:hover {
-          background-color: var(--light-orange-btn);
-        }
       }
     }
   }
@@ -255,46 +178,5 @@ h1 {
   }
   .full-details-list-item-key {
     font-weight: bold;
-  }
-}
-
-@include max-screen-custom(645px) {
-  .calculator {
-    .content {
-      .padded-content {
-        padding: 0;
-        flex-direction: column;
-        .calculator-left,
-        .calculator-right {
-          flex-basis: 100%;
-        }
-        .calculator-left {
-          padding-right: 0;
-          label{
-            margin-top: 1rem;
-          }
-          p{
-            margin-top: 1rem;
-          }
-        }
-        .calculator-right {
-          border-left: none;
-          padding-left: 0;
-          padding-right: 0;
-          padding-top: 0;
-        }
-      }
-    }
-  }
-  .full-details {
-    .full-details-list {
-      margin-top: 0.5rem;
-    }
-    .full-details-list-item {
-      &.full-details-list-item-key,
-      &.full-details-list-item-value {
-        flex: 1 1 100%;
-      }
-    }
   }
 }
